# scanpath-visualization

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
other_vis/: README.md  viz_text_heatmap_from_text_metrics.py
other_vis/Brainstorming with our Friends/: Brainstorming with our Friends 8a7bc24f13c949db84e67807703a89d0.md
scanpath-visualization/: pyproject.toml  requirements.txt  run_tests.py
scanpath-visualization/scanpath_visualization_app/: app.py  constants.py  controls.py  data.py  plots.py
scanpath-visualization/scanpath_visualization_app/sample_data/: fixations.csv
scanpath-visualization/tests/: README.md  conftest.py  test_app.py  test_data.py  test_plots.py
scanpath_studio/: CLAUDE.md  __init__.py  __main__.py  animation_export.py  annotations.py  api.py  app.py  cli.py  constants.py  controls.py  data.py  datasets.py  export.py  measures.py  model_scanpaths.py  onestop_shard.py  plots.py  similarity.py  styles.py  synthetic.py  tabs.py  tour.py  update_sample_data.py  utils.py
scanpath_studio/sample_data/: fixations.csv  fixations.parquet  ia.csv  ia.parquet  raw_gaze.csv
scanpath_visualization_app/: CLAUDE.md  __init__.py  __main__.py  annotations.py  app.py  constants.py  controls.py  data.py  export.py  measures.py  onestop_shard.py  plots.py  styles.py  tabs.py  update_sample_data.py  utils.py
scanpath_visualization_app/sample_data/: ia.csv  raw_gaze.csv  raw_gaze.parquet
scripts/: changelog_notes.py  make_demo_gif.py  make_hero_gif.py
tests/: README.md  __init__.py  conftest.py  synthetic_data.py  test_animation_export.py  test_annotations.py  test_api.py  test_app.py  test_apptest.py  test_citation.py  test_cli.py  test_column_mapping.py  test_composite_selection.py  test_data.py  test_dataset_support.py  test_export.py  test_filters.py  test_measures.py  test_model_scanpaths.py  test_multiple_comparison_ui.py  test_plot_config_restore.py  test_plots.py  test_raw_gaze_sample.py  test_similarity.py  test_smoke.py  test_synthetic.py  test_wizard_helpers.py
