[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanpath-visualization-app"
version = "0.13.0"
description = "Interactive Streamlit workbench for visualizing eye-tracking-while-reading scanpaths, computing reading measures, and exporting figures and tabular data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Omer Shubi (LACC Lab, Technion)", email = "lacclab.technion@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["eye-tracking", "scanpath", "visualization", "streamlit", "reading", "psycholinguistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.52.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "numpy>=2.3.5",
    "pyarrow>=22.0.0",
    "kaleido>=0.2.1",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/lacclab/scanpath-visualization"
Issues = "https://github.com/lacclab/scanpath-visualization/issues"

[project.scripts]
scanpath-visualization = "scanpath_visualization_app.__main__:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["scanpath_visualization_app"]

[tool.setuptools.package-data]
"scanpath_visualization_app" = [
    "sample_data/*.csv",
    "sample_data/*.parquet",
    "sample_data/*.feather",
]
