[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanpath-studio"
dynamic = ["version"]
description = "Interactive Streamlit workbench for visualizing eye-tracking-while-reading scanpaths, computing reading measures, and exporting figures and tabular data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Omer Shubi (LACC Lab, Technion)", email = "lacclab.technion@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["eye-tracking", "scanpath", "visualization", "streamlit", "reading", "psycholinguistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.52.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "numpy>=2.3.5",
    "pyarrow>=22.0.0",
    "kaleido>=1.0",
    "watchdog>=4.0.0",
    # Rasterized animation export (GIF/MP4): Pillow encodes GIF; imageio's ffmpeg
    # extra bundles an ffmpeg binary for MP4 (no system package needed).
    "pillow>=10.0",
    "imageio[ffmpeg]>=2.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/lacclab/scanpath-studio"
Issues = "https://github.com/lacclab/scanpath-studio/issues"

[project.scripts]
scanpath-studio = "scanpath_studio.cli:main"

[tool.setuptools.dynamic]
# Single source of truth for the version: scanpath_studio/__version__
version = { attr = "scanpath_studio.__version__" }

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["scanpath_studio"]

[tool.setuptools.package-data]
"scanpath_studio" = [
    "sample_data/*.csv",
    "sample_data/*.parquet",
    "sample_data/*.feather",
]
